refactor generic repo and implement oapi validators
